manifest-files/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stayspotter-ingress
spec:
  rules:
  - host: stayspotter.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stayspotter-client-service
            port:
              number: 80
  - host: api.stayspotter.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stayspotter-api-service
            port:
              number: 8800
